--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -31,7 +31,6 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
-    needs: [test]
     concurrency:
       group: "pages"
       cancel-in-progress: false
@@ -58,7 +57,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'dist'
+          path: 'moviebait'
       - name: Deploy to Github Pages
         id: deployment
         uses: actions/deploy-pages@v4
