--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'moviebait'
+          path: 'dist'
       - name: Deploy to Github Pages
         id: deployment
         uses: actions/deploy-pages@v4
