--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -1,4 +1,5 @@
-name: Run tests then Deploy
+name: Run Playwright Tests and Deploy
+
 on:
   push:
     branches:
@@ -11,25 +12,35 @@ permissions:
   id-token: write
 
 jobs:
+  # Test job
   test:
-    name: Run Test Suite
+    name: Run Playwright Test Suite
     runs-on: ubuntu-latest
-    env:
-      COMPOSE_FILE: ./Dockerfile.ci
 
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
 
-    - name: Build Docker images
-      run: docker build -t main -f $COMPOSE_FILE .
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
 
-    - name: Run Tests
-      run: docker run main
+    - name: Install Dependencies
+      run: npm ci
 
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps chromium
+
+    - name: Run Playwright Tests
+      run: npx playwright test
+
+  # Deploy job, triggered after successful tests
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
+    needs: [test]
     concurrency:
       group: "pages"
       cancel-in-progress: false
@@ -40,24 +51,26 @@ jobs:
       BUILD_PATH_PREFIX: ${{ github.event.repository.name }}
 
     steps:
-      - name: Checkout
+      - name: Checkout Code
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Setup Node
-        uses: actions/setup-node@v4.0.2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm ci
-      - run: echo $BUILD_PATH_PREFIX
-      - name: Build the project
-        run: npm run cd
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build the Project
+        run: npm run build
+
       - name: Upload Artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: 'dist'
-      - name: Deploy to Github Pages
+
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
