--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -38,7 +38,7 @@ jobs:
       # Wait until Vite is fully ready and accessible
 
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps chromium
+      run: npx playwright install --with-deps
     
     - name: Run Playwright Tests
       run: npm run test:playwright
