--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "wait-on": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
